# mbsync_tools

./: README.md  setup.cfg
src/: gnome_keyring_add_imap_password.py  mbsync_helpers.py
