[metadata]
name = mbsync_tools
version = attr: src.VERSION
description = A set of tools designed to help mbsync fetch credentials from a secure store
long_description = file: README.rst
keywords = mbsync, gnome-keyring
license = BSD 3-Clause License

[options]
packages = find:
scripts =
  src/mbsync_helpers.py
  src/gnome_keyring_add_imap_password.py
install_requires =
  keyring
  SecretStorage
